--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,7 @@
     <link href='http://fonts.googleapis.com/css?family=Changa+One|Open+Sans:400italic,700italic,400,700,800' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/responsive.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
     <header>
@@ -23,18 +24,19 @@
       </nav>
     </header>
     <div id="wrapper">
-      <section>
+      <section id="primary">
         <h3>General Information</h3>
         <p>If you have any questions, please don't hesitate to contact me!</p>
         <p>Please only use phone contact for urgent inquiries. Otherwise, Telegram is the best way to reach me.</p>
       </section>
+
+      <section id="secondary">
         <h3>Contact Details</h3>
         <ul class="contact-info">
           <li class="phone"><a href="tel:415-999-9999">415-999-9999</a></li>
           <li class="mail"><a href="mailto:umidkhaitov96@gmail.com">umidkhaitov96@gmail.com</a></li>
           <li class="telegram"><a href="https://www.telegram.org/@CA94121">@CA94121</a></li>
         </ul>
-      <section>
       </section>
       <footer>
         <a href="http://twitter.com/nickrp"><img src="img/twitter-wrap.png" alt="Twitter Logo" class="social-icon"></a>
